<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="mainViewModel"
                  type="rek.gofscoreboard.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:background="@color/background">

        <TextView
                android:text="@string/number_of_players"
                android:id="@+id/labelNbPlayers"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/radioGroupNbPlayers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenTitle" />

        <RadioGroup
                android:checkedButton="@id/radioButton4players"
                android:id="@+id/radioGroupNbPlayers"
                app:layout_constraintTop_toBottomOf="@+id/labelNbPlayers"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerOneName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenRadioGroup">
            <RadioButton
                    android:text="@string/three_players_mode"
                    android:id="@+id/radioButton3players"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{() -> mainViewModel.updateNbPlayer(3)}"
                    style="@style/mainScreenRadioButton" />
            <RadioButton
                    android:text="@string/four_players_mode"
                    android:id="@+id/radioButton4players"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="60dp"
                    android:onClick="@{() -> mainViewModel.updateNbPlayer(4)}"
                    style="@style/mainScreenRadioButton"/>
        </RadioGroup>

        <TextView
                android:text="@string/player_one"
                android:id="@+id/labelPlayerOneName"
                android:labelFor="@id/editPlayerOneName"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupNbPlayers"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerTwoName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerOneName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

        <EditText
                android:text="@={mainViewModel.playerOneName}"
                android:id="@+id/editPlayerOneName"
                android:hint="@string/player_name_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toBottomOf="@+id/labelPlayerOneName"
                app:layout_constraintStart_toEndOf="@+id/labelPlayerOneName"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_two"
                android:id="@+id/labelPlayerTwoName"
                android:labelFor="@id/editPlayerTwoName"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerOneName"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerThreeName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerTwoName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

        <EditText
                android:text="@={mainViewModel.playerTwoName}"
                android:id="@+id/editPlayerTwoName"
                android:contentDescription="@string/name_p2_description"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toBottomOf="@+id/labelPlayerTwoName"
                app:layout_constraintStart_toEndOf="@+id/labelPlayerTwoName"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_three"
                android:id="@+id/labelPlayerThreeName"
                android:labelFor="@id/editPlayerThreeName"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerTwoName"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerFourName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerThreeName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

        <EditText
                android:text="@={mainViewModel.playerThreeName}"
                android:id="@+id/editPlayerThreeName"
                android:contentDescription="@string/name_p3_description"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toBottomOf="@+id/labelPlayerThreeName"
                app:layout_constraintStart_toEndOf="@+id/labelPlayerThreeName"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_four"
                android:id="@+id/labelPlayerFourName"
                android:labelFor="@id/editPlayerFourName"
                android:visibility="@{mainViewModel.playerFourVisibility}"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerThreeName"
                app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerFourName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

        <EditText
                android:text="@={mainViewModel.playerFourName}"
                android:id="@+id/editPlayerFourName"
                android:contentDescription="@string/name_p4_description"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:visibility="@{mainViewModel.playerFourVisibility}"
                app:layout_constraintBottom_toBottomOf="@+id/labelPlayerFourName"
                app:layout_constraintStart_toEndOf="@+id/labelPlayerFourName"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <Button
                android:text="@string/start_game_button"
                android:onClick="onStartGame"
                android:id="@+id/buttonStartGame"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerFourName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/startGameButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>