...
            android:layout_height="match_parent"
            tools:context=".ScoreboardActivity"
            android:background="@color/background">

        <TextView
                android:text="@string/enter_scores_explanation"
                android:id="@+id/labelNewScoreText"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerOneScore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/scoreboardScreenHelpText"/>

...
