<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_load_saved_game"
            android:orderInCategory="100"
            android:title="@string/load_saved_game"
            app:showAsAction="never" />
    <item
            android:id="@+id/privacy"
            android:orderInCategory="101"
            android:title="@string/privacy"
            app:showAsAction="never" />
</menu>